--- a/css/style.css
+++ b/css/style.css
@@ -72,18 +72,10 @@ body {
   font-weight: 400;
   color: #555;
 }
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
-}
-.hero {
-  width: 130rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
-  align-items: center;
-  margin: 0 auto;
-}
+
+/**************************/
+/* General Components */
+/**************************/
 .heading-primary {
   font-size: 5.2rem;
   font-weight: 700;
@@ -91,12 +83,6 @@ body {
   color: #333;
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
-}
-
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.5;
-  margin-bottom: 4.8rem;
 }
 
 .btn:link,
@@ -109,22 +95,26 @@ body {
 
   transition: background-color 0.3s;
 }
+
 .btn--full:link,
 .btn--full:visited {
   background-color: #e67e22;
   color: #fff;
   font-weight: 600;
 }
+
 .btn--full:hover,
 .btn--full:active {
   background-color: #cf711f;
   color: #fff;
 }
+
 .btn--outline:link,
 .btn--outline:visited {
   background-color: #fff;
   color: #555;
 }
+
 .btn--outline:hover,
 .btn--outline:active {
   background-color: #fdf2e9;
@@ -132,12 +122,90 @@ body {
   /* border: 3px solid #fff; */
   box-shadow: inset 0 0 0 3px #fff;
 }
-.hero-img {
-  width: 100%;
-}
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+/**************************/
+/* HEADER */
+/**************************/
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  /* Because we want header to be sticky later*/
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 2.2rem;
+}
+
+/**************************/
+/* Navigation */
+/**************************/
+
+.main-nav-list {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+    background-color: #cf711f;
+}
+/**************************/
+/* Hero Section */
+/**************************/
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+.hero {
+  width: 130rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.5;
+  margin-bottom: 4.8rem;
+}
+
+.hero-img {
+  width: 100%;
 }
 
 .delivered-meals {
@@ -158,10 +226,6 @@ body {
   margin-left: -1.6rem;
   border: 3px solid #fdf2e9;
 }
-
-/* .delivered-imgs img:last-child {
-  margin: 0;
-} */
 
 .delivered-text {
   font-size: 1.8rem;
