--- a/css/general.css
+++ b/css/general.css
@@ -86,7 +86,7 @@ body {
 
 .grid {
   display: grid;
-  column-gap:6.4rem;
+  column-gap: 6.4rem;
   row-gap: 9.6rem;
 }
 
@@ -102,8 +102,8 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.grid--centered-v{
-    align-items: center;
+.grid--centered-v {
+  align-items: center;
 }
 
 .heading-primary,
@@ -178,6 +178,36 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+/* HELPER / SETTINGS CLASSES*/
+
+.center-text {
+    text-align: center;
+}
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+strong {
+  font-weight: 500;
 }
