--- a/css/general.css
+++ b/css/general.css
@@ -148,14 +148,25 @@ body {
   margin-bottom: 1.6rem;
   letter-spacing: 0.75;
 }
+
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
   text-decoration: none;
   font-size: 2rem;
+  font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
+  /* Only necessary for .btn*/
+
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+
+  /* Put transtion on original "state"*/
+  /* transtion: background-color: 0.3s*/
   transition: background-color 0.3s;
 }
 
@@ -184,6 +195,18 @@ body {
   color: #555;
   /* border: 3px solid #fff; */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -220,6 +243,11 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER / SETTINGS CLASSES*/
