--- a/css/general.css
+++ b/css/general.css
@@ -110,6 +110,10 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .grid--centered-v {
   align-items: center;
 }
