--- a/css/general.css
+++ b/css/general.css
@@ -64,6 +64,7 @@ Medium: 11px
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -71,6 +72,9 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /* Only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
 /**************************/
@@ -178,13 +182,13 @@ body {
 .btn--full:visited {
   background-color: #e67e22;
   color: #fff;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .btn--full:hover,
 .btn--full:active {
   background-color: #cf711f;
-  color: #fff;
+  /* color: #fff; */
 }
 
 .btn--outline:link,
@@ -196,7 +200,7 @@ body {
 .btn--outline:hover,
 .btn--outline:active {
   background-color: #fdf2e9;
-  color: #555;
+
   /* border: 3px solid #fff; */
   box-shadow: inset 0 0 0 3px #fff;
 }
@@ -241,6 +245,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
