--- a/css/general.css
+++ b/css/general.css
@@ -15,6 +15,7 @@ Default: 1
 Small: 1.05
 Medium: 1.2
 Paragraph default: 1.6
+Large: 1.8
 
 - Letter spacing
 -0.5px
@@ -63,6 +64,10 @@ Medium: 11px
 }
 
 html {
+  /* font-size: 10px; */
+
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
 }
@@ -78,7 +83,7 @@ body {
 }
 
 /**************************/
-/* General Reusable Components */
+/* GENRAL REUSABLE COMPONENTS */
 /**************************/
 
 .container {
@@ -92,6 +97,7 @@ body {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
+
   /* margin-bottom: 9.6rem; */
 }
 
@@ -102,6 +108,7 @@ body {
 .grid:not(:last-child) {
   margin-bottom: 9.6rem;
 }
+
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
 }
@@ -114,11 +121,11 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.grid--5-cols {
+/* .grid--5-cols {
   grid-template-columns: repeat(5, 1fr);
-}
+} */
 
-.grid--centered-v {
+.grid--center-v {
   align-items: center;
 }
 
@@ -127,8 +134,11 @@ body {
 .heading-tertiary {
   font-weight: 700;
   color: #333;
+  /* color: #45260a; */
+  /* color: #343a40; */
   letter-spacing: -0.5px;
 }
+
 .heading-primary {
   font-size: 5.2rem;
   line-height: 1.05;
@@ -154,41 +164,39 @@ body {
   color: #cf711f;
   text-transform: uppercase;
   margin-bottom: 1.6rem;
-  letter-spacing: 0.75;
+  letter-spacing: 0.75px;
 }
 
 .btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
+
   text-decoration: none;
   font-size: 2rem;
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
-  /* Only necessary for .btn*/
-
+  /* Only necessary for .btn */
   border: none;
   cursor: pointer;
   font-family: inherit;
 
-  /* Put transtion on original "state"*/
-  /* transtion: background-color: 0.3s*/
-  transition: background-color 0.3s;
+  /* Put transition on original "state" */
+  /* transition: background-color 0.3s; */
+  transition: all 0.3s;
 }
 
 .btn--full:link,
 .btn--full:visited {
   background-color: #e67e22;
   color: #fff;
-  /* font-weight: 600; */
 }
 
 .btn--full:hover,
 .btn--full:active {
   background-color: #cf711f;
-  /* color: #fff; */
 }
 
 .btn--outline:link,
@@ -202,6 +210,8 @@ body {
   background-color: #fdf2e9;
 
   /* border: 3px solid #fff; */
+
+  /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
 }
 
@@ -234,7 +244,7 @@ body {
 }
 
 .list {
-  list-style-type: none;
+  list-style: none;
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
@@ -256,21 +266,22 @@ body {
 
 *:focus {
   outline: none;
+  /* outline: 4px dotted #e67e22; */
+  /* outline-offset: 8px; */
   box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
-/* HELPER / SETTINGS CLASSES*/
-
-.center-text {
-  text-align: center;
-}
-
+/* HELPER/SETTINGS CLASSES */
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
 
 .margin-bottom-md {
   margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
 }
 
 strong {
