--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
   padding: 4.8rem 0 9.6rem 0;
 }
 .hero {
-  width: 130rem;
+  max-width: 130rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 9.6rem;
@@ -484,7 +484,7 @@
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
-  height: 50rem;
+
   overflow: hidden;
 }
 
